--- a/one-one/Makefile
+++ b/one-one/Makefile
@@ -2,13 +2,13 @@ bin_PROGRAMS = project
 project_SOURCES = main.c thread.c thread.h
 
 project: main.o thread.o
-	gcc main.o thread.o -o project
+	gcc -g main.o thread.o -o project
 
 main.o: main.c
-	gcc -c main.c
+	gcc -c -g main.c
 
 thread.o: thread.c thread.h
-	gcc -c thread.c
+	gcc -c -g thread.c
 
 clean:
 	rm *.o project
