added more tests and shell script

--- a/one-one/Makefile
+++ b/one-one/Makefile
@@ -1,4 +1,4 @@
-all: project sweet spin mutex signal
+all: project sweet spin mutex signal stress matrix
 
 project: main.o thread.o
 	gcc -g main.o thread.o -o project
@@ -15,6 +15,12 @@ mutex: tests/mutex.o thread.o
 signal: tests/signal.o thread.o
 	gcc -g tests/signal.o thread.o -o signal
 
+stress: tests/stress.o thread.o
+	gcc -g tests/stress.o thread.o -o stress
+
+matrix: tests/matrix.o thread.o
+	gcc -g tests/matrix.o thread.o -o matrix
+
 sweet.o: sweet.c
 	gcc -c -g tests/sweet.c
 
@@ -27,6 +33,13 @@ mutex.o: mutex.c
 signal.o: signal.c
 	gcc -c -g tests/signal.c
 
+stress.o: stress.c
+	gcc -c -g tests/stress.c
+
+matrix.o: matrix.c
+	gcc -c -g tests/matrix.c
+
+
 main.o: main.c
 	gcc -c -g main.c
 
@@ -34,4 +47,4 @@ thread.o: thread.c thread.h
 	gcc -c -g thread.c
 
 clean:
-	rm *.o tests/*.o project sweet spin mutex signal
+	rm *.o tests/*.o project sweet spin mutex signal stress matrix
