Implemented locks in many-one-setjmp-longjmp

--- a/many-one-setjmp-longjmp/Makefile
+++ b/many-one-setjmp-longjmp/Makefile
@@ -1,17 +1,17 @@
 bin_PROGRAMS = project
-project_SOURCES = main.c thread1.c thread1.h queue.c queue.h
+project_SOURCES = main.c thread.c thread.h queue.c
 
-project: main.o thread1.o queue.o
-	gcc -g main.o thread1.o queue.o -o project
+project: main.o thread.o queue.o
+	gcc -g main.o thread.o queue.o -o project
 
-queue.o: queue.c queue.h
-	gcc -c queue.c 
+queue.o: queue.c
+	gcc -c queue.c
 
 main.o: main.c
 	gcc -c main.c
 
-thread1.o: thread1.c thread1.h
-	gcc -c thread1.c
+thread1.o: thread.c thread.h
+	gcc -c thread.c
 
 clean:
 	rm *.o project
