--- a/many-one-setjmp-longjmp/Makefile
+++ b/many-one-setjmp-longjmp/Makefile
@@ -1,36 +1,36 @@
 all: project sweet spin mutex signal stress matrix stress2 create join
 
-project: main.o thread.o
-	gcc -g main.o thread.o -o project
+project: main.o thread.o queue.o
+	gcc -g main.o thread.o queue.o -o project
 
-sweet: tests/sweet.o thread.o
-	gcc -g tests/sweet.o thread.o -o sweet
+sweet: tests/sweet.o thread.o queue.o
+	gcc -g tests/sweet.o thread.o queue.o -o sweet
 
-create: tests/create.o thread.o
-	gcc -g tests/create.o thread.o -o create
+create: tests/create.o thread.o queue.o
+	gcc -g tests/create.o thread.o queue.o -o create
 
-join: tests/join.o thread.o
-	gcc -g tests/join.o thread.o -o join
+join: tests/join.o thread.o queue.o
+	gcc -g tests/join.o thread.o queue.o -o join
 
-spin: tests/spin.o thread.o
-	gcc -g tests/spin.o thread.o -o spin
+spin: tests/spin.o thread.o queue.o
+	gcc -g tests/spin.o thread.o queue.o -o spin
 
-mutex: tests/mutex.o thread.o
-	gcc -g tests/mutex.o thread.o -o mutex
+mutex: tests/mutex.o thread.o queue.o
+	gcc -g tests/mutex.o thread.o queue.o -o mutex
 
-signal: tests/signal.o thread.o
-	gcc -g tests/signal.o thread.o -o signal
+signal: tests/signal.o thread.o queue.o
+	gcc -g tests/signal.o thread.o queue.o -o signal
 
-stress: tests/stress.o thread.o
-	gcc -g tests/stress.o thread.o -o stress
+stress: tests/stress.o thread.o queue.o
+	gcc -g tests/stress.o thread.o queue.o -o stress
 
-stress2: tests/stress2.o thread.o
-	gcc -g tests/stress2.o thread.o -o stress2
+stress2: tests/stress2.o thread.o queue.o
+	gcc -g tests/stress2.o thread.o queue.o -o stress2
 
-matrix: tests/matrix.o thread.o
-	gcc -g tests/matrix.o thread.o -o matrix
+matrix: tests/matrix.o thread.o queue.o
+	gcc -g tests/matrix.o thread.o queue.o -o matrix
 
-sweet.o: sweet.c
+sweet.o: sweet.c 
 	gcc -c -g tests/sweet.c
 
 create.o: create.c
@@ -66,3 +66,21 @@ thread.o: thread.c thread.h
 
 clean:
 	rm *.o tests/*.o project sweet spin mutex signal stress matrix stress2 create join
+
+# bin_PROGRAMS = project
+# project_SOURCES = main.c thread.c thread.h queue.c
+
+# project: main.o thread.o queue.o
+# 	gcc -g main.o thread.o queue.o -o project
+
+# queue.o: queue.c
+# 	gcc -g -c queue.c
+
+# main.o: main.c
+# 	gcc -g -c main.c
+
+# thread.o: thread.c thread.h
+# 	gcc -g -c thread.c
+
+# clean:
+# 	rm *.o project
